--- a/AnkiDroid/src/main/res/xml/preferences_advanced.xml
+++ b/AnkiDroid/src/main/res/xml/preferences_advanced.xml
@@ -29,7 +29,7 @@
     android:key="pref_screen_advanced">
         <EditTextPreference
             android:defaultValue="/sdcard/AnkiDroid"
-            android:key="deckPath"
+            android:key="@string/pref_ankidroid_directory_key"
             android:title="@string/col_path"
             app1:useSimpleSummaryProvider="true"/>
         <PreferenceCategory android:title="@string/pref_cat_performance" >
@@ -46,29 +46,29 @@
             android:title="@string/pref_cat_workarounds" >
             <SwitchPreference
                 android:defaultValue="false"
-                android:key="softwareRender"
+                android:key="@string/disable_hardware_render_key"
                 android:summary="@string/software_render_summ"
                 android:title="@string/software_render" />
             <SwitchPreference
                 android:defaultValue="false"
-                android:key="safeDisplay"
+                android:key="@string/safe_display_key"
                 android:summary="@string/safe_display_summ"
                 android:title="@string/safe_display" />
             <SwitchPreference
                 android:defaultValue="false"
-                android:key="useInputTag"
+                android:key="@string/use_input_tag_key"
                 android:disableDependentsState="true"
                 android:summary="@string/use_input_tag_summ"
                 android:title="@string/use_input_tag" />
             <!-- Workaround for #5533 -->
             <SwitchPreference
                 android:defaultValue="false"
-                android:key="disableExtendedTextUi"
+                android:key="@string/disable_single_field_edit_key"
                 android:summary="@string/disable_extended_text_ui_summ"
                 android:title="@string/disable_extended_text_ui" />
             <SwitchPreference
                 android:defaultValue="true"
-                android:key="noteEditorNewlineReplace"
+                android:key="@string/note_editor_newline_replace_key"
                 android:summary="@string/note_editor_replace_newlines_summ"
                 android:title="@string/note_editor_replace_newlines"
                 />
@@ -76,7 +76,7 @@
             due to problems with the default monospace font handling -->
             <SwitchPreference
                 android:defaultValue="false"
-                android:key="noCodeFormatting"
+                android:key="@string/no_code_formatting_key"
                 android:summary="@string/no_code_formatting_summ"
                 android:title="@string/no_code_formatting" />
             <!-- #8424 - allow users to decide if they want to focus the EditText
@@ -86,13 +86,13 @@
              -->
             <SwitchPreference
                 android:defaultValue="true"
-                android:key="autoFocusTypeInAnswer"
+                android:key="@string/type_in_answer_focus_key"
                 android:summary="@string/type_in_answer_focus_summ"
-                android:dependency="useInputTag"
+                android:dependency="@string/use_input_tag_key"
                 android:title="@string/type_in_answer_focus" />
             <SwitchPreference
                 android:defaultValue="false"
-                android:key="exitViaDoubleTapBack"
+                android:key="@string/exit_via_double_tap_back_key"
                 android:summary="@string/exit_via_double_tap_back_summ"
                 android:title="@string/exit_via_double_tap_back" />
             <!-- #9639 - allow all files in media selection dialog - .opus is application/octet-stream
@@ -100,26 +100,26 @@
              We don't want to allow this by default, but we want an override -->
             <SwitchPreference
                 android:defaultValue="false"
-                android:key="mediaImportAllowAllFiles"
+                android:key="@string/media_import_allow_all_files_key"
                 android:summary="@string/media_import_allow_all_files_summ"
                 android:title="@string/media_import_allow_all_files" />
         </PreferenceCategory>
         <PreferenceCategory
-            android:key="category_plugins"
+            android:key="@string/pref_cat_plugins_key"
             android:title="@string/pref_cat_plugins" >
             <SwitchPreference
                 android:defaultValue="true"
-                android:key="providerEnabled"
+                android:key="@string/enable_api_key"
                 android:summary="@string/enable_api_summary"
                 android:title="@string/enable_api_title"/>
             <Preference
-                android:key="thirdpartyapps_link"
+                android:key="@string/thirdparty_apps_key"
                 android:summary="@string/thirdparty_apps_summary"
                 android:title="@string/thirdparty_apps_title">
             </Preference>
             <SwitchPreference
                 android:defaultValue="false"
-                android:key="tts"
+                android:key="@string/tts_key"
                 android:summary="@string/tts_summ"
                 android:title="@string/tts" />
             <Preference
@@ -128,23 +128,23 @@
                 android:key="@string/pref_reset_languages_key" />
             <SwitchPreference
                 android:defaultValue="false"
-                android:key="convertFenText"
+                android:key="@string/convert_fen_text_key"
                 android:summary="@string/convert_fen_text_summ"
                 android:title="@string/convert_fen_text" />
             <SwitchPreference
                 android:defaultValue="false"
-                android:key="scrolling_buttons"
+                android:key="@string/more_scrolling_buttons_key"
                 android:summary="@string/more_scrolling_buttons_summ"
                 android:title="@string/more_scrolling_buttons" />
             <SwitchPreference
                 android:defaultValue="false"
-                android:key="double_scrolling"
+                android:key="@string/double_scrolling_gap_key"
                 android:summary="@string/double_scrolling_gap_summ"
                 android:title="@string/double_scrolling_gap" />
             <ListPreference
                 android:entries="@array/stats_default_deck_labels"
                 android:entryValues="@array/stats_default_deck_values"
-                android:key="stats_default_deck"
+                android:key="@string/stats_default_deck_key"
                 android:title="@string/stats_default_deck_title"
                 android:defaultValue="current"
                 app1:useSimpleSummaryProvider="true"/>
@@ -154,7 +154,7 @@
                 android:fragment="com.ichi2.anki.Preferences$AdvancedStatisticsSettingsFragment" />
             <SwitchPreference
                 android:defaultValue="false"
-                android:key="html_javascript_debugging"
+                android:key="@string/html_javascript_debugging_key"
                 android:summary="@string/html_javascript_debugging_summ"
                 android:title="@string/html_javascript_debugging"/>
             <!-- Title and summary are variable, handled in string:
@@ -162,10 +162,10 @@
             <SwitchPreference
                 android:id="@+id/card_browser_external_context_menu"
                 android:defaultValue="false"
-                android:key="card_browser_enable_external_context_menu"/>
+                android:key="@string/card_browser_external_context_menu_key"/>
             <SwitchPreference
                 android:id="@+id/anki_card_external_context_menu"
                 android:defaultValue="true"
-                android:key="anki_card_enable_external_context_menu"/>
+                android:key="@string/anki_card_external_context_menu_key"/>
         </PreferenceCategory>
 </PreferenceScreen>
