Organize Custom sync server constants

--- a/AnkiDroid/src/main/res/values/preferences.xml
+++ b/AnkiDroid/src/main/res/values/preferences.xml
@@ -77,6 +77,10 @@
     <string name="image_zoom_preference">imageZoom</string>
     <string name="answer_button_size_preference">answerButtonSize</string>
     <string name="show_large_answer_buttons_preference">showLargeAnswerButtons</string>
+    <!-- Custom sync server -->
+    <string name="custom_sync_server_enable_key">useCustomSyncServer</string>
+    <string name="custom_sync_server_base_url_key">syncBaseUrl</string>
+    <string name="custom_sync_server_media_url_key">syncMediaUrl</string>
     <!-- Advanced -->
     <string name="pref_ankidroid_directory_key">deckPath</string>
     <string name="disable_hardware_render_key">softwareRender</string>
