--- a/AnkiDroid/src/main/res/values/preferences.xml
+++ b/AnkiDroid/src/main/res/values/preferences.xml
@@ -82,6 +82,8 @@
     <string name="custom_sync_server_base_url_key">syncBaseUrl</string>
     <string name="custom_sync_server_media_url_key">syncMediaUrl</string>
     <!-- Advanced -->
+    <string name="pref_advanced_screen_key">pref_screen_advanced</string>
+    <string name="pref_cat_workarounds_key">category_workarounds</string>
     <string name="pref_ankidroid_directory_key">deckPath</string>
     <string name="disable_hardware_render_key">softwareRender</string>
     <string name="safe_display_key">safeDisplay</string>
