--- a/AnkiDroid/src/main/res/values/preferences.xml
+++ b/AnkiDroid/src/main/res/values/preferences.xml
@@ -20,7 +20,7 @@
     <string name="keep_screen_on_preference">keepScreenOn</string>
     <string name="new_timezone_handling_preference">newTimezoneHandling</string>
     <string name="double_tap_time_interval_preference">doubleTapTimeInterval</string>
-    <!-- Sync preferences -->
+    <!-- Sync -->
     <string name="pref_sync_screen_key">syncScreen</string>
     <string name="sync_account_key">syncAccount</string>
     <string name="sync_fetch_missing_media_key">syncFetchesMedia</string>
@@ -42,6 +42,10 @@
     <string name="pref_font_applicability_key">overrideFontBehavior</string>
     <string name="pref_browser_and_editor_font_key">browserEditorFont</string>
     <string name="pref_display_filenames_in_browser_key">card_browser_show_media_filenames</string>
+    <string name="show_topbar_preference">showTopbar</string>
+    <string name="show_progress_preference">showProgress</string>
+    <string name="show_eta_preference">showETA</string>
+    <string name="pref_card_browser_font_scale_key">relativeCardBrowserFontSize</string>
     <!-- App bar buttons -->
     <string name="reset_custom_buttons_key">reset_custom_buttons</string>
     <string name="custom_button_undo_key">customButtonUndo</string>
@@ -106,13 +110,9 @@
     <string name="html_javascript_debugging_key">html_javascript_debugging</string>
     <string name="card_browser_external_context_menu_key">card_browser_enable_external_context_menu</string>
     <string name="anki_card_external_context_menu_key">anki_card_enable_external_context_menu</string>
-
-    <string name="show_topbar_preference">showTopbar</string>
-    <string name="show_progress_preference">showProgress</string>
-    <string name="show_eta_preference">showETA</string>
     <string name="pref_reset_languages_key">resetLanguages</string>
     <string name="pref_backup_max_key">backupMax</string>
-    <string name="pref_card_browser_font_scale_key">relativeCardBrowserFontSize</string>
+    <!-- Advanced statistics -->
     <string name="pref_computation_precision_key">advanced_forecast_stats_compute_precision</string>
     <string name="pref_compute_n_days_key">advanced_forecast_stats_compute_n_days</string>
     <string name="pref_advanced_statistics_enabled_key">advanced_statistics_enabled</string>
