--- a/AnkiDroid/src/main/res/values/attrs.xml
+++ b/AnkiDroid/src/main/res/values/attrs.xml
@@ -31,6 +31,12 @@
     <declare-styleable name="SeekBarPreference">
         <attr name="interval" format="integer" />
     </declare-styleable>
+
+    <declare-styleable name="HeaderPreference">
+        <!-- String array of entries to join in order to build the preference summary -->
+        <attr name="summaryEntries" format="reference"/>
+    </declare-styleable>
+
     <!-- App buttons -->
     <attr name="largeButtonBackgroundColor" format="color"/>
     <attr name="largeButtonBackgroundColorFocused" format="color"/>
