--- a/AnkiDroid/src/main/res/xml/preferences_advanced_statistics.xml
+++ b/AnkiDroid/src/main/res/xml/preferences_advanced_statistics.xml
@@ -6,8 +6,6 @@
     xmlns:app="http://arbitrary.app.namespace/com.ichi2.anki"
     xmlns:app1="http://schemas.android.com/apk/res-auto"
     android:title="@string/advanced_statistics_title">
-    <!-- For some unknown reason, getAttributeResourceValue only works for the custom namespace
-    if "http://schemas.android.com/apk/res-auto" is set as namespace too -->
     <SwitchPreference
         android:defaultValue="false"
         android:key="@string/pref_advanced_statistics_enabled_key"
@@ -21,7 +19,7 @@
         android:title="@string/advanced_forecast_stats_compute_n_days_title"
         app:interval="1"
         app:min="0"
-        app:useSimpleSummaryProvider="true"/>
+        app1:useSimpleSummaryProvider="true"/>
     <com.ichi2.preferences.SeekBarPreferenceCompat
         android:defaultValue="90"
         android:dependency="@string/pref_advanced_statistics_enabled_key"
@@ -31,7 +29,7 @@
         android:title="@string/advanced_forecast_stats_compute_precision_title"
         app:interval="1"
         app:min="0"
-        app:formattedSummary="@string/pref_summary_percentage"/>
+        app1:summaryFormat="@string/pref_summary_percentage"/>
     <com.ichi2.preferences.SeekBarPreferenceCompat
         android:defaultValue="1"
         android:dependency="@string/pref_advanced_statistics_enabled_key"
@@ -40,5 +38,5 @@
         android:title="@string/advanced_forecast_stats_mc_n_iterations_title"
         app:interval="1"
         app:min="1"
-        app:useSimpleSummaryProvider="true"/>
+        app1:useSimpleSummaryProvider="true"/>
 </PreferenceScreen>
