--- a/AnkiDroid/src/main/res/xml/preferences_reviewing.xml
+++ b/AnkiDroid/src/main/res/xml/preferences_reviewing.xml
@@ -41,19 +41,19 @@
             app:min="0"
             app:xlabel="@string/xlabel_dayoffset_seekbar"
             app:ylabel="@string/ylabel_dayoffset_seekbar"
-            app:formattedSummary="@string/day_offset_summary"/>
+            app1:summaryFormat="@string/day_offset_summary"/>
         <com.ichi2.preferences.NumberRangePreferenceCompat
             android:key="@string/learn_cutoff_preference"
             android:title="@string/learn_cutoff"
             app:max="999"
             app:min="0"
-            app:formattedSummary="@string/pref_summary_minutes"/>
+            app1:summaryFormat="@string/pref_summary_minutes"/>
         <com.ichi2.preferences.NumberRangePreferenceCompat
             android:key="@string/time_limit_preference"
             android:title="@string/time_limit"
             app:max="9999"
             app:min="0"
-            app:formattedSummary="@string/pref_summary_minutes"/>
+            app1:summaryFormat="@string/pref_summary_minutes"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/timeout_answer_text" >
         <SwitchPreference
@@ -76,14 +76,14 @@
             android:key="@string/timeout_answer_seconds_preference"
             android:max="30"
             android:title="@string/timeout_answer_seconds"
-            app:formattedSummary="@string/pref_summary_seconds"/>
+            app1:summaryFormat="@string/pref_summary_seconds"/>
         <com.ichi2.preferences.SeekBarPreferenceCompat
             android:defaultValue="60"
             android:dependency="@string/timeout_answer_preference"
             android:key="@string/timeout_question_seconds_preference"
             android:max="60"
             android:title="@string/timeout_question_seconds"
-            app:formattedSummary="@string/pref_summary_seconds"/>
+            app1:summaryFormat="@string/pref_summary_seconds"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/pref_cat_advanced">
         <SwitchPreference
