--- a/AnkiDroid/src/main/res/values/01-core.xml
+++ b/AnkiDroid/src/main/res/values/01-core.xml
@@ -118,6 +118,7 @@
     of the permissions/app info screen will differ between devices. -->
     <string name="startup_no_storage_permission">Please grant AnkiDroid the ‘Storage’ permission to continue</string>
     <string name="startup_all_files_access_permission">Please grant AnkiDroid the ‘All files access’ permission to continue</string>
+    <string name="startup_photos_and_videos_permission">Please grant AnkiDroid the ‘Photos and videos’ permission to continue</string>
     <!--
         The time_quantities are units of time. They are used without
         plurals or dots.
@@ -337,4 +338,6 @@
     <string name="storage_access_summary">Saves your collection in a safe place that will not be deleted if the app is uninstalled</string>
     <string name="all_files_access_title"
         comment="Name of the “All files access” permission from Android 10 and after">All files access</string>
+    <string name="media_access_title">Media access</string>
+    <string name="media_access_summary">Allows syncing and attaching media to your cards</string>
 </resources>
