--- a/AnkiDroid/src/main/res/layout/card_browser.xml
+++ b/AnkiDroid/src/main/res/layout/card_browser.xml
@@ -7,7 +7,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
@@ -16,6 +16,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
             android:background="?attr/appBarColor"
             android:minHeight="?attr/actionBarSize"
             android:theme="@style/ActionBarStyle">
@@ -37,31 +38,30 @@
                 app:popupTheme="@style/ActionBar.Popup" />
         </com.google.android.material.appbar.MaterialToolbar>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:background="?android:attr/colorBackground"
-            android:orientation="horizontal"
-            android:layout_height="?attr/listPreferredItemHeight">
+        <Spinner
+            android:id="@+id/browser_column1_spinner"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/browser_column2_spinner"
+            android:layout_width="0dp"
+            android:layout_height="?attr/listPreferredItemHeight"
+            />
 
-            <Spinner
-                android:id="@+id/browser_column1_spinner"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                />
-
-            <Spinner
-                android:id="@+id/browser_column2_spinner"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                />
-        </LinearLayout>
+        <Spinner
+            android:id="@+id/browser_column2_spinner"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintStart_toEndOf="@id/browser_column1_spinner"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="?attr/listPreferredItemHeight"
+            />
 
         <ListView
             android:id="@+id/card_browser_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/browser_column1_spinner"
+            app:layout_constraintBottom_toTopOf="@id/navigation_bar"
             android:background="?android:attr/colorBackground"
             android:divider="?attr/cardBrowserDivider"
             android:overScrollFooter="@color/transparent"
@@ -71,7 +71,14 @@
             android:drawSelectorOnTop="true"
             android:fastScrollEnabled="true" />
 
-    </LinearLayout>
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/navigation_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:menu="@menu/bottom_bar"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include layout="@layout/anki_progress"/>
         
